resolving conflicts and adding new functions

--- a/Ecomerce-Pellejero/src/App.css
+++ b/Ecomerce-Pellejero/src/App.css
@@ -1,3 +1,13 @@
+.container-big{
+  font-family: Roboto, sans-serif;
+}
+
+.container-items-product{
+  flex-direction: row;
+  display: flex;
+  justify-content: space-around;
+}
+
 .App {
   text-align: center;
 }
