--- a/Ecomerce-Pellejero/src/Components/NavBar/NavBar.css
+++ b/Ecomerce-Pellejero/src/Components/NavBar/NavBar.css
@@ -17,6 +17,7 @@
     margin-left: 10px;
     font-size: 21px;
     font-weight: 800;
+    font-family: 'Water Brush', cursive;
 }
 
 .container-nav-bar .middle-container {
